--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             margin: 0;
             font-weight: 700;
             font-size: 2.5rem;
-            background: linear-gradient(135deg, #0F172A, #1E1B4B, #3B0764);
+            background: linear-gradient(135deg, #2563EB, #4F46E5, #7C3AED);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
